# SQL_project

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: DBManager.py  api_hh.py  db_manager.py
utils/: API_hh.py
